fix: add empty schedules key for sync_typesense deployment

--- a/prefect.yaml
+++ b/prefect.yaml
@@ -57,6 +57,7 @@ deployments:
   tags:
   - typesense
   description: Sync all Typesense collections (movies, tv_series, persons, playlists, users)
+  schedules: []
   entrypoint: sync_typesense/sync_typesense.py:sync_typesense
   parameters: {}
   work_pool:
